// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[MessageMetrics Rendering] renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full"
    >
      <div
        class="rcx-message-divider"
        role="separator"
      >
        <div
          class="rcx-message-divider__bar"
        />
        <div
          class="rcx-message-divider__wrapper"
        >
          May, 24, 2020
        </div>
         
        <div
          class="rcx-message-divider__bar"
        />
      </div>
      <div
        class="rcx-message rcx-message--clickable customclass"
        tabindex="0"
      >
        <div
          class="rcx-box rcx-box--full rcx-message-container rcx-message-container--left"
        >
          <figure
            class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x36"
          >
            <img
              alt=""
              class="rcx-avatar__element rcx-avatar__element--x36"
              src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
            />
          </figure>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-message-container"
        >
          <div
            class="rcx-box rcx-box--full rcx-message-header"
          >
            <div
              class="rcx-box rcx-box--full rcx-message-header__wrapper"
            >
              <span
                class="rcx-box rcx-box--full rcx-message-header__name-container"
              >
                <span
                  class="rcx-box rcx-box--full rcx-message-header__name"
                >
                  Haylie George
                </span>
                 
                <span
                  class="rcx-box rcx-box--full rcx-message-header__username"
                >
                  @haylie.george
                </span>
              </span>
              <div
                class="rcx-box rcx-box--full rcx-message-header__roles"
              >
                <span
                  class="rcx-box rcx-box--full  rcx-tag  rcx-box rcx-box--full rcx-message-header__role"
                >
                  <span
                    class="rcx-tag__inner"
                  >
                    Admin
                  </span>
                </span>
                <span
                  class="rcx-box rcx-box--full  rcx-tag  rcx-box rcx-box--full rcx-message-header__role"
                >
                  <span
                    class="rcx-tag__inner"
                  >
                    User
                  </span>
                </span>
                <span
                  class="rcx-box rcx-box--full  rcx-tag  rcx-box rcx-box--full rcx-message-header__role"
                >
                  <span
                    class="rcx-tag__inner"
                  >
                    Owner
                  </span>
                </span>
              </div>
              <span
                class="rcx-box rcx-box--full rcx-message-header__time"
              >
                12:00 PM
              </span>
            </div>
          </div>
          <div
            class="rcx-message-body"
          >
            Ut enim ad minim veniam
          </div>
          <div
            class="rcx-box rcx-box--full rcx-message-block"
          >
            <div
              class="rcx-message-metrics__content-item"
            >
              <div
                class="rcx-message-metrics__content-wrapper"
              >
                <div
                  class="rcx-message-metrics__item"
                >
                  <button
                    class="rcx-box rcx-box--full rcx-button--small rcx-button--primary rcx-button"
                    type="button"
                  >
                    <span
                      class="rcx-button--content"
                    >
                      Reply
                    </span>
                  </button>
                </div>
                <div
                  class="rcx-message-metrics__item"
                  title="Replies"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-thread rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                  <div
                    class="rcx-message-metrics__item-label"
                  >
                    10
                  </div>
                </div>
                <div
                  class="rcx-message-metrics__item"
                >
                  <button
                    class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-ll6zd0"
                    title="Following"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-bell rcx-icon rcx-css-4pvxx3"
                    >
                      
                    </i>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[MessageMetrics Rendering] renders ThreadMetrics without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full"
    >
      <div
        class="rcx-message-divider"
        role="separator"
      >
        <div
          class="rcx-message-divider__bar"
        />
        <div
          class="rcx-message-divider__wrapper"
        >
          May, 24, 2020
        </div>
         
        <div
          class="rcx-message-divider__bar"
        />
      </div>
      <div
        class="rcx-message rcx-message--clickable customclass"
        tabindex="0"
      >
        <div
          class="rcx-box rcx-box--full rcx-message-container rcx-message-container--left"
        >
          <figure
            class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x36"
          >
            <img
              alt=""
              class="rcx-avatar__element rcx-avatar__element--x36"
              src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
            />
          </figure>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-message-container"
        >
          <div
            class="rcx-box rcx-box--full rcx-message-header"
          >
            <div
              class="rcx-box rcx-box--full rcx-message-header__wrapper"
            >
              <span
                class="rcx-box rcx-box--full rcx-message-header__name-container"
              >
                <span
                  class="rcx-box rcx-box--full rcx-message-header__name"
                >
                  Haylie George
                </span>
                 
                <span
                  class="rcx-box rcx-box--full rcx-message-header__username"
                >
                  @haylie.george
                </span>
              </span>
              <div
                class="rcx-box rcx-box--full rcx-message-header__roles"
              >
                <span
                  class="rcx-box rcx-box--full  rcx-tag  rcx-box rcx-box--full rcx-message-header__role"
                >
                  <span
                    class="rcx-tag__inner"
                  >
                    Admin
                  </span>
                </span>
                <span
                  class="rcx-box rcx-box--full  rcx-tag  rcx-box rcx-box--full rcx-message-header__role"
                >
                  <span
                    class="rcx-tag__inner"
                  >
                    User
                  </span>
                </span>
                <span
                  class="rcx-box rcx-box--full  rcx-tag  rcx-box rcx-box--full rcx-message-header__role"
                >
                  <span
                    class="rcx-tag__inner"
                  >
                    Owner
                  </span>
                </span>
              </div>
              <span
                class="rcx-box rcx-box--full rcx-message-header__time"
              >
                12:00 PM
              </span>
            </div>
          </div>
          <div
            class="rcx-message-body"
          >
            Ut enim ad minim veniam
          </div>
          <div
            class="rcx-box rcx-box--full rcx-message-block"
          >
            <div
              class="rcx-message-metrics__content-item"
            >
              <div
                class="rcx-message-metrics__content-wrapper"
              >
                <div
                  class="rcx-message-metrics__item"
                >
                  <button
                    class="rcx-box rcx-box--full rcx-button--small rcx-button--primary rcx-button rcx-css-yendf2"
                    type="button"
                  >
                    <span
                      class="rcx-button--content"
                    >
                      View thread
                    </span>
                  </button>
                </div>
                <div
                  class="rcx-message-metrics__item"
                >
                  <button
                    class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-ll6zd0"
                    title="Following"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-bell rcx-icon rcx-css-4pvxx3"
                    >
                      
                    </i>
                    <div
                      class="rcx-message-metrics__item__follow-badge"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-badge rcx-badge--danger rcx-badge--small"
                      />
                    </div>
                  </button>
                </div>
                <div
                  class="rcx-message-metrics__item"
                  title="Participants"
                >
                  <div
                    class="rcx-message-metrics__avatar-row"
                  >
                    <div
                      class="rcx-message-metrics__avatar-row__content"
                    >
                      <figure
                        class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x16"
                      >
                        <img
                          alt="gazzolia"
                          class="rcx-avatar__element rcx-avatar__element--x16"
                          src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
                        />
                      </figure>
                    </div>
                    <div
                      class="rcx-message-metrics__avatar-row__content"
                    >
                      <figure
                        class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x16"
                      >
                        <img
                          alt="gazzolia"
                          class="rcx-avatar__element rcx-avatar__element--x16"
                          src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
                        />
                      </figure>
                    </div>
                  </div>
                  <div
                    class="rcx-message-metrics__item-label"
                  >
                    + 3 followers
                  </div>
                </div>
                <div
                  class="rcx-message-metrics__item"
                  title="Last message: 12th July, 2024"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-thread rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                  <div
                    class="rcx-message-metrics__item-label"
                  >
                    5 messages, 12th July, 2024
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
